v0.10.6 ()
  Bugs fixed
	* Parsing function calls without parens at the expression level is not
	allowed now.
	* Allow parsing of boolean facts from YAML files.

v0.10.5 (2014/01/06)
  Bugs fixed
	* Lambda blocks can now end with a bare function call
	* Fix version bounds with hslua and luautils

v0.10.4 (2013/12/18)
  New features
	* Moved to the latest hruby version.
	* Updated the text bound

v0.10.3 (2013/12/03)
  New features
    * The scope tracking system has been improved. It is now possible to know
	the original host of an imported resource, which helps a lot in case of
	resource clashes
	* is_virtual fact
	* new stdlib functions: flatten, str2bool, validate_absolute_path
	* Hiera support
	* JSON output that is compatible with "puppet apply"
	* New addfacts command for the pdbquery utility
	* Support for the classes variable in templates
	* Support for @instance variables in inline_template
	* Support for scope['key'] syntax in templates
	* Support for facts overriding with puppetresources
  Bugs fixed
	* Deserialization problems with puppetDBs
	* Fixed several bugs with imported resources
	* Bug with relationships overrides that got stored as parameters
	* Importing several exported resources from the same class now works
	* Templates with an invalid encoding could crash the process
	* Yaml parse errors of the puppetdb file now throw errors

v0.10.2 (2013/10/27)
  Bugs fixed
	* PVP support
  New features
	* Support for properly setting instance variables before computing
	templates with native Ruby.

v0.10.1 (2013/10/27)
  Bugs fixed
	* The TestDB file was never created.

v0.10.0 (2013/10/27)
  New features
	* Map/each/filter functions with lambdas (not really tested)
	* Rewrite of the PuppetDB API
	* The whole scope stack is kept with each Resource, for easier debugging
	* Inclusion of three PuppetDB backends : dummy (no effect), TestDB (stored
	in a YAML file) and Remote (standard PuppetDB API)
  Bugs fixed