@@ -49,7 +49,17 @@ type PSpecM = ReaderT TestEnv HC.SpecM
 type PSpec = PSpecM ()
 
 testCatalog ::  Nodename -> FilePath -> FinalCatalog -> PSpec -> IO H.Summary
-testCatalog nd pdir catlg test = H.hspecWith (H.defaultConfig { H.configFormatter = H.failed_examples }) (describeCatalog nd pdir catlg test)
+testCatalog nd pdir catlg test = H.hspecWith (H.defaultConfig { H.configFormatter = H.silent { H.failedFormatter = fform } })
+                                             (describeCatalog nd pdir catlg test)
+    where
+        fform = do
+            failures <- H.getFailMessages
+            forM_ failures $ \(H.FailureRecord path reason) -> do
+                H.write ("[" ++ T.unpack nd ++ "] ")
+                H.writeLine (snd path)
+                let err = either (("uncaught exception: " ++) . H.formatException) id reason
+                H.withFailColor $ unless (null err) $ H.writeLine err
+            unless (null failures) H.newParagraph
 
 describeCatalog :: Nodename -> FilePath -> FinalCatalog -> PSpec -> H.Spec
 describeCatalog nd pdir catlg test = H.describe (T.unpack nd) $ runReaderT test (TestEnv catlg (pdir <> "/modules") pdir)
