@@ -1,4 +1,6 @@
 v0.10.6 ()
+  New features
+    * New all nodes testing for puppetresources.
   Bugs fixed
 	* Parsing function calls without parens at the expression level is not
 	allowed now.
